fixed horizontal overflow

--- a/src/main.scss
+++ b/src/main.scss
@@ -164,6 +164,7 @@ h2.hero-title-second {
   position: relative;
   @include gradient-x;
   @include box-shadow(0px -2px 12px 3px rgba(0,0,0,.75));
+  overflow-x: hidden;
 }
 
 // portfolio sections
@@ -430,7 +431,10 @@ h2.hero-title-second {
   .port-subtitle {
     font-size: 2rem;
     line-height: 1.3;
-}
+  }
+  .mds-text__box:first-child {
+    margin-top: 0.5rem;
+  }
 }
 
 // Small devices (landscape phones, 576px and up)
